--- a/GroupCalendarProject/app/src/main/AndroidManifest.xml
+++ b/GroupCalendarProject/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".SettingsPage" />
         <activity android:name=".MyCalendars" />
         <activity android:name=".ThemesPage"></activity>
+        <user-permission android:name="android.permission.INTERNET" />
     </application>
 
 </manifest>
