--- a/GroupCalendarProject/app/build.gradle
+++ b/GroupCalendarProject/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.example.huliaaaa.groupcalendarproject"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-annotations:24.2.0'
     compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.github.sundeepk:compact-calendar-view:2.0.3-beta'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.npanigrahy:Custom-Calendar-View:v1.1'
 }
 apply plugin: 'com.google.gms.google-services'
