--- a/GroupCalendarProject/app/src/main/AndroidManifest.xml
+++ b/GroupCalendarProject/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.huliaaaa.groupcalendarproject">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,8 +26,14 @@
         <activity android:name=".MainMenu" />
         <activity android:name=".SettingsPage" />
         <activity android:name=".MyCalendars" />
-        <activity android:name=".ThemesPage"></activity>
+        <activity android:name=".ThemesPage" />
+
         <user-permission android:name="android.permission.INTERNET" />
+
+        <activity android:name=".CalendarView" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
