--- a/GroupCalendarProject/app/src/main/AndroidManifest.xml
+++ b/GroupCalendarProject/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".CreateEvent"></activity>
+        <activity android:name=".CreateEvent" />
+        <activity android:name=".GroupCalendars"></activity>
     </application>
 
 </manifest>
