--- a/GroupCalendarProject/app/build.gradle
+++ b/GroupCalendarProject/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.example.huliaaaa.groupcalendarproject"
+        applicationId "com.SRJB.huliaaaa.groupcalendarproject"
         minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
@@ -16,20 +16,22 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            debuggable false
+        }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-annotations:24.2.0'
+    compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.github.sundeepk:compact-calendar-view:2.0.3-beta'
     compile 'com.github.npanigrahy:Custom-Calendar-View:v1.1'
