--- a/GroupCalendarProject/app/src/main/AndroidManifest.xml
+++ b/GroupCalendarProject/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/TestTheme1">
         <activity android:name=".LoginPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,8 @@
         <activity android:name=".AddFriendsToGroupCalendar" />
         <activity android:name=".GroupCalendarView" />
         <activity android:name=".CreateGroupEvent" />
-        <activity android:name=".EditEvent"></activity>
+        <activity android:name=".EditEvent" />
+        <activity android:name=".testMainMenu"></activity>
     </application>
 
 </manifest>
